@@ -1,3 +1,8 @@
+2004-10-19  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (opd_entry_value): Handle --just-symbols objects.
+	(ppc64_elf_edit_opd): Likewise.
+
 2004-10-18  Mark Mitchell  <mark@codesourcery.com>
 
 	* elfarm-nabi.c (ELF_DYNAMIC_SEC_FLAGS): Add comment.
